--- a/style.css
+++ b/style.css
@@ -13,13 +13,14 @@ body {
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     border: 3px solid white;
     text-align: inherit;
 }
 
-.ml12 {
+p {
     font-weight: 200;
     font-size: 22px;
     font-family: 'Source Sans Pro', sans-serif;
@@ -27,7 +28,9 @@ body {
     word-break: break-word;
 }
 
-.ml12 .letter {
-    display: inline-block;
-    line-height: 1em;
+.item_two {
+    position: absolute;
+    bottom: 22px;
+    width: 100%;
+    text-align: center;
 }
