--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Nunito', sans-serif;;
+    font-family: 'Nunito', sans-serif;
+    overflow: hidden;
 }
 
 body {
-    background: #ec7010e0;
-    border: 3px solid white;
+    background: linear-gradient(#e66465, #9198e5);
 }
 
 .container {
@@ -39,7 +39,7 @@ p {
 
 a {
     text-decoration: none;
-    margin: 15px 5px !important;
+    margin: 20px 5px !important;
     border: 1px solid white;
     padding: 5px;
     border-radius: 5px;
