--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background: linear-gradient(#e66465, #9198e5);
+    background: linear-gradient(103.3deg, rgba(248, 112, 7, 0.89) 7.7%, rgb(248, 150, 105) 90.8%);
 }
 
 .container {
